--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,8 @@ deploy:
   env: "Dockerreact-env"
   bucket_name: "elasticbeanstalk-us-east-2-674586854642"
   bucket_path: "docker-react"
-  access_key_id: $AWS_ACCESS_KEY
+  access_key_id:
+    secure: "$AWS_ACCESS_KEY"
   secret_access_key:
     secure: "$AWS_SECRET_KEY"
   on:
